Pending changes in the mainline
===============================


Version 4.1 (2023-08-30)
========================

* New function from the SDK wrapped in Python:
  - orthanc.RegisterStorageCommitmentScpCallback()
* New configuration section "Python" to group settings related to the plugin:
  - "Python.Path" is an alias for global option "PythonScript"
  - "Python.Verbose" is an alias for global option "PythonVerbose"
* New configuration option "Python.DisplayMemoryUsage" to periodically
  display memory allocations that stem from Python plugins

Maintenance
-----------

* Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling
  methods, in IncomingHttpRequestFilter and in the CMove callback.
* New builders for Windows: Supporting 32 / 64bit with Python 3.9 / 3.10 / 3.11


Version 4.0 (2022-02-23)
========================

=> Minimum SDK version: 1.10.0 <=

* New functions from the SDK wrapped in Python:
  - orthanc.RegisterIncomingCStoreInstanceFilter()
  - orthanc.RegisterReceivedInstanceCallback()


Version 3.4 (2021-08-31)
========================

* On Orthanc stopping, wait for all the queued events to have been processed
* Docker-based builder scripts distinguishing Debian buster and bullseye


Version 3.3 (2021-08-12)
========================

* New Python function: "orthanc.RegisterStorageArea()"
* Custom exception "orthanc.OrthancException" is raised instead of "ValueError"


Version 3.2 (2021-06-11)
========================

* New functions from the SDK wrapped in Python:
  - orthanc.CreateDicom()
  - orthanc.CreateImageFromBuffer()
  - orthanc.DicomInstance.GetInstanceData()
  - orthanc.FindQuery.GetFindQueryTagElement()
  - orthanc.FindQuery.GetFindQueryTagGroup()
  - orthanc.Image.GetImageBuffer()
  - orthanc.LookupDictionary()
  - orthanc.RegisterFindCallback()
  - orthanc.RegisterMoveCallback()
  - orthanc.RegisterWorklistCallback()
  - orthanc.WorklistAnswers.WorklistAddAnswer()
