@@ -79,11 +79,11 @@ pool = multiprocessing.Pool(10)  # simultaneous downloads
 pool.map(Download, commands)
 
 
-if False:
-    # Patch the SDK
-    subprocess.check_call([ 'patch', '-p0', '-i', os.path.join
-                            (os.path.abspath(os.path.dirname(__file__)),
-                             'OrthancCPlugin-%s.patch' % PLUGIN_SDK_VERSION) ],
+# Patch the SDK, if need be
+patch = os.path.join(os.path.abspath(os.path.dirname(__file__)),
+                     'OrthancCPlugin-%s.patch' % PLUGIN_SDK_VERSION)
+if os.path.exists(patch):
+    subprocess.check_call([ 'patch', '-p0', '-i', patch ],
                           cwd = os.path.join(os.path.dirname(__file__),
                                              'Orthanc',
                                              'Sdk-%s' % PLUGIN_SDK_VERSION, 'orthanc'))
