@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix signature of "orthanc.RestOutput.SendHttpStatus()"
+
 
 Version 4.1 (2023-08-30)
 ========================
